--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "numeral": "^2.0.6",
+    "rxjs": "^7.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
