--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "build": "vue-cli-service build",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES vue-cli-service build --report",
     "lint": "vue-cli-service lint",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "node server.js"
   },
   "dependencies": {
     "@mdi/js": "^5.9.55",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "numeral": "^2.0.6",
     "rxjs": "^7.3.0",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
