--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "numeral": "^2.0.6",
     "rxjs": "^7.3.0",
     "serve-static": "^1.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
